<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:padding="20dp"
            android:layout_gravity="center"
            android:background="@drawable/circle_green"
            android:layout_marginBottom="16dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_directions_car_black_24dp"
                android:tint="#ffffff"/>
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/register_transportation_description"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pref_car_owner"
            android:layout_alignParentLeft="true"/>
        <CheckBox
            android:id="@+id/checkbox_car_owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:state_checked="true"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/car_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pref_car_price"
            android:inputType="number"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/car_driving_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pref_car_distance"
            android:inputType="number"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/car_ownership_period"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pref_car_ownership_period"
            android:inputType="number"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pref_title_car_size"
            android:layout_alignParentLeft="true"/>
        <Spinner
            android:id="@+id/spinner_car_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

</LinearLayout>